# gpgpu-kb

./: .env.docker.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.sh
.claude/: index.json
.github/workflows/: ci.yml
.omc/plans/: autopilot-chat-enhance.md  autopilot-impl-scoring.md  autopilot-impl.md  chinese-mode.md  open-questions.md  ralplan-next-step-2026-04-25.md
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  pyproject.toml  run_api.sh
backend/kb/: __init__.py  config.py  daily.py  database.py  main.py  models.py  reports.py  schemas.py
backend/kb/ingestion/: _persistence.py  arxiv.py  github_trending.py  rss.py  run.py  sitemap_blog.py
backend/kb/processing/: embeddings.py  fulltext.py  llm.py  pdf.py
backend/kb/scripts/: backfill_full_text.py  rescore_non_papers.py
backend/tests/: README.md  conftest.py  test_api_smoke.py  test_daily_cli.py  test_ingestion_arxiv.py  test_ingestion_github.py  test_ingestion_persistence.py  test_ingestion_rss.py  test_ingestion_run.py  test_ingestion_sitemap_blog.py  test_processing_embeddings.py  test_processing_fulltext.py  test_processing_llm.py  test_processing_pdf.py  test_reports.py
backend/tests/fixtures/: arxiv_sample.json  github_sample.json  rss_sample.json
docs/plans/: 2026-04-25-gpgpu-knowledge-base.md
docs/superpowers/plans/: 2026-05-03-browse-source-filter.md
docs/superpowers/specs/: 2026-05-03-browse-source-filter-design.md
frontend/: .dockerignore  CLAUDE.md  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: language-switcher.tsx  paper-card.tsx  search-bar.tsx  source-filter.tsx  theme-switcher.tsx
frontend/src/hooks/: use-conversation-history.ts
frontend/src/lib/: api.ts  types.ts
frontend/test-results/: .last-run.json
frontend/test-results/chat-chat-page-sends-query-and-shows-answer-chromium/: error-context.md
(+16 files in other folders)
