[project]
name = "gpgpu-kb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "feedparser>=6.0.0",
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "arxiv>=2.1.0",
    "pypdf>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["kb*"]
exclude = ["data*", "tests*"]

[project.optional-dependencies]
ml = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
]
llm-cloud = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]
# HTML article extraction (kb.processing.fulltext). Required for
# blog / project full_text prefetch + source-anchored chat on non-PDF
# rows; without it those rows fall back to abstract+summary.
fulltext = [
    "trafilatura>=1.12.0",
]
# Convenience aggregate: everything an end-user needs for the full-fat
# install (semantic search + cloud LLM + HTML extraction). Use this when
# you don't want to remember the individual extras:
#     pip install -e '.[all]'
all = [
    "gpgpu-kb[ml]",
    "gpgpu-kb[llm-cloud]",
    "gpgpu-kb[fulltext]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.0",
    "ruff>=0.6.0",
]
